hibernate is here

--- a/testJr1/.classpath
+++ b/testJr1/.classpath
@@ -4,5 +4,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-4.0.1.final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-4.0.1.final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-jpa-2.0-api-1.0.1.final.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.12.1.ga.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-logging-3.1.0.cr2.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.1_spec-1.0.1.final.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
