--- a/testJr1/.project
+++ b/testJr1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>testJr1</name>
+	<name>test1r</name>
 	<comment></comment>
 	<projects>
 	</projects>
