--- a/testJr1/pom.xml
+++ b/testJr1/pom.xml
@@ -14,12 +14,17 @@
 			<name>JBoss repository</name>
 			<url>http://repository.jboss.org/maven2/</url>
 		</repository>
+		<repository>
+			<id>maven-eclipse-repo</id>
+			<url>http://maven-eclipse.github.io/maven</url>
+		</repository>
 	</repositories>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<swt.version>4.6.1</swt.version>
 	</properties>
 
 	<dependencies>
@@ -34,6 +39,12 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.21.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.swt</groupId>
+			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+			<version>${swt.version}</version>
 		</dependency>
 	</dependencies>
 
