--- a/SimpleMavenWebapp/pom.xml
+++ b/SimpleMavenWebapp/pom.xml
@@ -37,8 +37,7 @@
 
 	<build>
 		<finalName>SimpleMavenWebapp</finalName>
-		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
-				defaults (may be moved to parent pom) -->
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
 			<plugins>
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
@@ -68,6 +67,21 @@
 				<plugin>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
+				</plugin>
+				<!-- Use below plugin to deploy this maven project to tomcat server -->
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.2</version>
+					<configuration>
+						<url>http://localhost:8081/manager/text</url>
+						<path>/SimpleMavenWebapp</path>
+						<!-- Set update to true to avoid exist war package can not be override error -->
+						<update>true</update>
+						<!-- Because deploy this maven project using plugin in pom so use the manager-script role user. -->
+						<username>tomcat</username>
+						<password>tomcat</password>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
