--- a/gwt-spring-hibernate-tutorial-master/pom.xml
+++ b/gwt-spring-hibernate-tutorial-master/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<!-- Convenience property to set the GWT version -->
 		<gwtVersion>2.5.0-rc1</gwtVersion>
-		<springframeworkVersion>3.1.2.RELEASE</springframeworkVersion>
+		<springframeworkVersion>4.3.17</springframeworkVersion>
 		<!-- GWT needs at least java 1.5 -->
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
