--- a/gwt-spring-hibernate-tutorial-master/pom.xml
+++ b/gwt-spring-hibernate-tutorial-master/pom.xml
@@ -12,8 +12,8 @@
 
 	<properties>
 		<!-- Convenience property to set the GWT version -->
-		<gwtVersion>2.5.0-rc1</gwtVersion>
-		<springframeworkVersion>4.3.18</springframeworkVersion>
+		<gwtVersion>2.8.2</gwtVersion>
+		<springframeworkVersion>5.1.7.RELEASE</springframeworkVersion>
 		<!-- GWT needs at least java 1.5 -->
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -171,7 +171,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>2.8.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -213,8 +213,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
